Remove bogus "support" for <sourcetext> and <parsererror>.  Bug 210658, patch by Blake Kaplan <mrbkap@rice.edu>, r+sr=bzbarsky